<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/drawing_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/pallet_ll"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image" />

        <edu.tcu.aimebyiringiro.paint.DrawingView
            android:id="@+id/drawing_view"
            android:background="@color/tint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/pallet_ll"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/action_button_ll"
        app:layout_constraintTop_toBottomOf="@id/drawing_fl">

        <ImageView
            android:background="@color/black"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_selected"
            android:contentDescription="@string/black" />
        <ImageView
            android:background="@color/red"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/red" />
        <ImageView
            android:background="@color/green"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/green" />
        <ImageView
            android:background="@color/blue"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/blue" />
        <ImageView
            android:background="@color/tcu_purple"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/purple" />
        <ImageView
            android:background="@color/off_white"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/path_color_normal"
            android:contentDescription="@string/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_button_ll"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/brush_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_brush"
            android:scaleType="centerCrop"
            android:contentDescription="@string/brush_icon" />
        <ImageView
            android:id="@+id/gallery_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_gallery"
            android:scaleType="centerCrop"
            android:contentDescription="@string/gallery_icon" />
        <ImageView
            android:id="@+id/undo_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_undo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/undo_icon" />
        <ImageView
            android:id="@+id/save_iv"
            android:background="@color/light_gray"
            android:padding="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_save"
            android:scaleType="centerCrop"
            android:contentDescription="@string/save_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
